--- a/web/css/min-1190px.css
+++ b/web/css/min-1190px.css
@@ -23,7 +23,7 @@
     align-items: center;
     height: 60px;
     float: right;
-    margin-left: 25px;
+    padding: 0 15px;
     cursor: pointer;
 
 }
