--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2891,7 +2891,7 @@ a .btn-sort-reviews.active
 }
 .official_answer{
     margin-top: 20px;
-    padding: 0 20px;
+    padding-right: 20px;
     background-color: #f7f8fd;
 }
 .official_answer .comment-content{
