--- a/web/css/admin/main.css
+++ b/web/css/admin/main.css
@@ -3,3 +3,33 @@
     content: '';
     width: 15px;
 }
+
+.icon-add-content:before{
+    width: 20px;
+    height: 20px;
+    content: url("../../img/icon_add_adm.png");
+    display: flex;
+    margin-right: 15px;
+}
+
+.icon-moderation-adm:before{
+    width: 20px;
+    height: 20px;
+    content: url("../../img/icon_moderation_adm.png");
+    display: flex;
+    margin-right: 15px;
+}
+.icon-edit-adm:before{
+    width: 20px;
+    height: 20px;
+    content: url("../../img/icon_edit_adm.png");
+    display: flex;
+    margin-right: 15px;
+}
+.icon-bz-ac-adm:before{
+    width: 20px;
+    height: 18px;
+    content: url("../../img/icon_bz_ac_adm.png");
+    display: flex;
+    margin-right: 15px;
+}
