--- a/web/css/min-1260px.css
+++ b/web/css/min-1260px.css
@@ -7,6 +7,9 @@
     width: 1260px;
     margin: 0 auto;
 }
+.menu-btn {
+    margin-left: -10px;
+}
 .a-auto-complete,
 .block-auto-complete-header{
     width: 1260px;
@@ -23,7 +26,7 @@
     height: 60px;
     justify-content: center;
     align-items: center;
-    margin-left: 25px;
+    margin-left: 5px;
     cursor: pointer;
 }
 .btn_br:hover{
