--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4020,6 +4020,11 @@ a .btn-sort-reviews.active
     padding: 10px;
     margin-top: 10px;
 }
+.field-input input.error{
+    border: 1px solid #ff4148;
+    color: #ff4148;
+}
+
 .field-input input::-webkit-input-placeholder{
     font-family: PT_Sans;
     color: #6b778f;
