--- a/web/css/admin/dataGrid.css
+++ b/web/css/admin/dataGrid.css
@@ -121,3 +121,48 @@
     text-decoration: none;
 }
 
+span.moderation{
+    color: red;
+}
+
+span.confirm{
+    color: green;
+}
+
+.data-grid-container-btn{
+    display: flex;
+    align-items: center;
+}
+
+.btn-moderation{
+    display: flex;
+    margin-right: 15px;
+}
+
+.--confirm{
+    content: "";
+    display: flex;
+    width: 23px;
+    height: 18px;
+    background-image: url(../../img/serial_icons.png);
+    background-position: 477px 882px;
+}
+
+.--cancels{
+    content: "";
+    display: flex;
+    width: 23px;
+    height: 23px;
+    background-image: url(../../img/serial_icons.png);
+    background-position: 90px 159px;
+}
+
+.--delete:before{
+    content: "";
+    display: flex;
+    width: 20px;
+    height: 24px;
+    background-image: url("../../img/serial_icons.png");
+    background-position: 390px 800px;
+
+}
